RESOLVED FIXED119243
Null deref under WebPage::scaledSnapshotWithOptions
https://bugs.webkit.org/show_bug.cgi?id=119243
Summary Null deref under WebPage::scaledSnapshotWithOptions
Tim Horton
Reported 2013-07-30 03:20:22 PDT
WebFrame::coreFrame() can be null (if the WebCore Frame is already torn down), so we should check it. <rdar://problem/14502050>
Attachments
patch (1.38 KB, patch)
2013-07-30 03:22 PDT, Tim Horton
darin: review+
Tim Horton
Comment 1 2013-07-30 03:22:41 PDT
Tim Horton
Comment 2 2013-07-30 12:42:08 PDT
Note You need to log in before you can comment on or make changes to this bug.