Null deref under WebPage::scaledSnapshotWithOptions https://bugs.webkit.org/show_bug.cgi?id=119243 <rdar://problem/14502050>

Reviewed by Darin Adler.

* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::scaledSnapshotWithOptions):
WebFrame::coreFrame() can be null (if the Frame is already torn down),
so we should check it.


Canonical link: https://commits.webkit.org/137252@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@153487 268f45cc-cd09-0410-ab3c-d52691b4dbfc